--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1555680202-c86f0e12f086?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+  <div class="container">
+    <h1>Join the biggest League of legends forum in the internet.</h1>
+    <p><strong>A place where you can be free of any judment and you can discuss anything.</strong></p>
+    <div class="btn btn-light">Join our community</div>
+  </div>
+</div>
